modification : mise à jour du chemin de vérification de la norme dans le workflow GitHub

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     # Vérification de la norme
     - name: Check norm
       run: |
-        norminette src/
+        norminette philo/
 
     # Compilation du projet
     - name: Build project
